# gateway

./: .dockerignore  .fpm  .gitignore  .gitlab-ci.yml  .gitmodules  .trivyignore.yaml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ci  README.md  after-install.sh  build.rs  crates.js  defguard-gateway.service  defguard-gateway.service.freebsd  defguard-rc.conf  deny.toml  example-config.toml  flake.nix  help.html  search-index.js  settings.html  src-files.js
.github/ISSUE_TEMPLATE/: 02-bug.yml
.github/workflows/: build-docker.yml  ci.yml  cross.yml  current.yml  docs.yml  publish-docker-latest.yml  release.yml  sbom-regenerate.yml  sbom.yml  test.yml  update-repositories.yml
ci/docker/armv7-unknown-linux-gnueabihf/: Dockerfile  build
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile  build
defguard_gateway/: all.html  constant.VERSION.html  fn.execute_command.html  fn.init_syslog.html  index.html  macro.mask!.html  macro.mask.html  sidebar-items.js  static.VERSION.html
defguard_gateway/config/: fn.get_config.html  index.html  sidebar-items.js  struct.Config.html
defguard_gateway/enterprise/: index.html
defguard_gateway/enterprise/firewall/: constant.PORT_PROTOCOLS.html  enum.Address.html  enum.FirewallError.html  enum.Policy.html  enum.Port.html  fn.max_address.html  index.html  sidebar-items.js  struct.FirewallConfig.html  struct.FirewallRule.html  struct.Protocol.html
defguard_gateway/error/: enum.GatewayError.html  index.html  sidebar-items.js
defguard_gateway/gateway/: index.html  sidebar-items.js  struct.Gateway.html
defguard_gateway/proto/: enum.UpdateType.html  index.html  sidebar-items.js  struct.Configuration.html  struct.ConfigurationRequest.html  struct.Peer.html  struct.PeerStats.html  struct.StatsUpdate.html  struct.Update.html
defguard_gateway/proto/enterprise/: index.html
defguard_gateway/proto/gateway/: enum.UpdateType.html  index.html  struct.Configuration.html  struct.ConfigurationRequest.html  struct.Peer.html  struct.PeerStats.html  struct.StatsUpdate.html  struct.Update.html
defguard_gateway/proto/gateway/update/: index.html  (+2 more)
defguard_gateway/proto/gateway_service_client/: index.html  struct.GatewayServiceClient.html
defguard_gateway/proto/gateway_service_server/: constant.SERVICE_NAME.html  index.html  sidebar-items.js  struct.GatewayServiceServer.html  trait.GatewayService.html
defguard_gateway/proto/stats_update/: enum.Payload.html  index.html
defguard_gateway/proto/update/: enum.Update.html  index.html
defguard_gateway/server/: fn.run_server.html  index.html  sidebar-items.js
examples/: adam.rs  api.rs  bsd.rs  client.rs  freebsd.rs  server.rs
freebsd/: defguard-gateway
images/ami/: gateway.pkr.hcl  gateway.sh
linux/: defguard-gateway.service  postinst  postrm  preinst  prerm
mvc/app/cache/: _usr_local_opnsense_mvc_app_views_layout_partials_base_dialog.volt.php  _usr_local_opnsense_mvc_app_views_layout_partials_base_form.volt.php  _usr_local_opnsense_mvc_app_views_layout_partials_base_menu_system.volt.php  _usr_local_opnsense_mvc_app_views_layout_partials_base_tabs_content.volt.php  _usr_local_opnsense_mvc_app_views_layout_partials_base_tabs_header.volt.php  _usr_local_opnsense_mvc_app_views_layout_partials_form_input_tr.volt.php  _usr_local_opnsense_mvc_app_views_layouts_default.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_acmeclient_accounts.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_acmeclient_certificates.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_acmeclient_settings.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_acmeclient_validations.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_core_firmware.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_core_not_found.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_defguardgateway_index.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_diagnostics_log.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_ipsec_connections.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_ipsec_leases.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_ipsec_sessions.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_ipsec_tunnels.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_ipsec_vti.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_monit_index.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_redis_index.volt.php  _usr_local_opnsense_mvc_app_views_opnsense_zabbixagent_index.volt.php
opnsense/: Makefile
proto/: say.proto  wgservice.proto
search.desc/defguard_gateway/: defguard_gateway-desc-0-.js
src/: client.rs  config.rs  error.rs  gateway.rs  grpc.rs  hello.rs  lib.rs  logger.rs  logging.rs  main.rs  server.rs  setup.rs  state.rs  utils.rs  version.rs  wg.rs  wgserver.rs  wgservice.rs  wireguard.rs
src/defguard_gateway/: config.rs.html  error.rs.html  gateway.rs.html  lib.rs.html  server.rs.html
src/defguard_gateway/enterprise/: mod.rs.html
src/enterprise/firewall/: api.rs  iprange.rs  mod.rs
src/grpc/: mod.rs
src/nvlist/: mod.rs
src/tests/: mock_wgapi.rs  mod.rs  mtls.rs
src/wireguard/: host.rs  key.rs  mod.rs  net.rs  netlink.rs  wgapi.rs
src/wireguard/bsd/: mod.rs  nvlist.rs  sockaddr.rs  timespec.rs  wgio.rs
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/nftnl/set/: trait.SetKey.js
trait.impl/prost/message/: trait.Message.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/tonic/server/: trait.NamedService.js
trait.impl/tower_service/: trait.Service.js
(+89 files in other folders)
