[package]
name = "defguard-gateway"
version = "2.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
defguard_version = { git = "https://github.com/DefGuard/defguard.git", rev = "5be16525f5208739fd79384b30d8ac5056ffdb2f" }
defguard_wireguard_rs = { git = "https://github.com/DefGuard/wireguard-rs", rev = "d0b01eabca015ea6c7ddf4e255a0228074684e96" }
defguard_certs = { git = "https://github.com/DefGuard/defguard.git", rev = "290bdee718f51179c71e07f3bce3f8a0cbfb9379" }
env_logger = "0.11"
gethostname = "1.0"
ipnetwork = "0.21"
libc = { version = "0.2", default-features = false }
log = "0.4"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
syslog = "7.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = [] }
toml = { version = "0.9", default-features = false, features = [
    "parse",
    "serde",
] }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "gzip",
    "router",
    "tls-native-roots",
    "tls-ring",
] }
tracing = "0.1"
tonic-prost = "0.14"
tower = "0.5"
chrono = "0.4.43"
tracing-subscriber = "0.3.22"

[target.'cfg(target_os = "linux")'.dependencies]
nftnl = { git = "https://github.com/DefGuard/nftnl-rs.git", rev = "1a1147271f43b9d7182a114bb056a5224c35d38f" }
mnl = "0.2"

[target.'cfg(any(target_os = "freebsd", target_os = "macos", target_os = "netbsd"))'.dependencies]
nix = { version = "0.30", default-features = false, features = ["ioctl"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-std", "io-util"] }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "router",
    "transport",
] }
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

[build-dependencies]
tonic-prost-build = "0.14"
vergen-git2 = { version = "1.0", features = ["build"] }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
strip = "symbols"
