[package]
name = "defguard-gateway"
version = "2.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "env"] }
defguard_certs = { git = "https://github.com/DefGuard/defguard.git", rev = "564dc72c" }
defguard_grpc_tls = { git = "https://github.com/DefGuard/defguard.git", rev = "cb7231f5" }
defguard_version = { git = "https://github.com/DefGuard/defguard.git", rev = "7d28f46e" }
rustls-webpki = { version = "0.103", features = ["ring", "std"] }
rustls-pki-types = "1"
defguard_wireguard_rs = "0.9"
env_logger = "0.11"
ipnetwork = "0.21"
libc = { version = "0.2", default-features = false }
log = "0.4"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
syslog = "7.0"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = [] }
toml = { version = "1.0", default-features = false, features = [
    "parse",
    "serde",
] }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "gzip",
    "router",
    "tls-native-roots",
    "tls-ring",
] }
tonic-prost = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
nftnl = { git = "https://github.com/DefGuard/nftnl-rs.git", rev = "a5cf4c9965118e27795f4ad94ea5fbbde2687ff7" }
mnl = "0.3"

[target.'cfg(any(target_os = "freebsd", target_os = "macos", target_os = "netbsd"))'.dependencies]
nix = { version = "0.31", default-features = false, features = ["ioctl"] }

[dev-dependencies]
defguard_certs = { git = "https://github.com/DefGuard/defguard.git", rev = "564dc72c" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["sync", "time"] }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "router",
    "transport",
] }
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

[build-dependencies]
tonic-prost-build = "0.14"
vergen-git2 = "9.1"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
strip = "symbols"
